# GuPiao

./: .env.example  .env.futu.example  .env.ptrade.example  .env.qmt.example  .env.simulation.example  .gitignore  AGENTS.md  DEPLOYMENT.md  GO_LIVE_CHECKLIST.md  LOOP.md  README.md  STATE.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  loop-budget.md  loop-constraints.md  loop-run-log.md  start_tonight_observe.sh
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  backtest_engine.py  brokers.py  config.py  data_sync.py  database.py  live_trading.py  main.py  market_cache.py  market_data.py  models.py  notifications.py  overnight_strategy.py  plugin_worker.py  plugins.py  providers.py  recent_overnight_backtest.py  risk.py  runtime_bootstrap.py  scheduler.py  scheduler_runner.py  security.py  services.py  simulation_accounts.py  simulation_runtime.py  strategy_execution.py  trading_calendar.py  worker.py
backend/migrations/: 0001_initial.sql  0002_tradingagents_auto.sql  0003_probability_portfolio.sql  0004_independent_strategy_suite.sql
backend/scripts/: backtest_recent_overnight.py  generate_schema.py  prepare_simulation_runtime.py  train_probability_portfolio.py  verify_adapter_contracts.py  verify_backtest_acceptance.py  verify_cross_platform_smoke.py  verify_e2e_smoke.py  verify_env_loading.py  verify_futu_adapter.py  verify_futu_sdk_path.py  verify_live_guardrails.py  verify_live_symbol_permissions.py  verify_provider_fallbacks.py  verify_realtime_chain.py  verify_schedule_chain.py
backend/tests/: conftest.py  test_backtest_engine.py  test_boundaries.py  test_core.py  test_data_sync.py  test_database.py  test_dependency_contracts.py  test_live_accounts.py  test_market_cache.py  test_market_data.py  test_models.py  test_notification_routing.py  test_overnight_strategy.py  test_probability_portfolio_allocation.py  test_probability_portfolio_api.py  test_probability_portfolio_candidates.py  test_probability_portfolio_dispatch.py  (+33 more)
(+108 files in other folders)
