[project]
name = "gupiao-backend"
version = "0.1.0"
description = "GuPiao A-share quantitative trading API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "pymysql>=1.1,<2",
  "python-multipart>=0.0.9,<1",
  "backtrader>=1.9.78.123",
  "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
market = [
  "akshare>=1.16",
  "mootdx>=0.11",
  "tushare>=1.4",
  "pandas>=2.2,<3",
  "pypinyin>=0.53,<1",
  "pyarrow>=17,<20",
]
dev = [
  "httpx>=0.25,<0.26",
  "pytest>=7.4,<9",
  "ruff>=0.6,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
